[tool.poetry]
name = "nostra-lp-pricer"
version = "0.1.0"
description = "LP pricer for Nostra"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.4,<3.13"
"starknet.py" = "0.23.0"
pydantic = "^2.7.4"
pragma-sdk = { path = "../pragma-sdk", develop = true }
types-pyyaml = "^6.0.12.20240311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
