[tool.poetry]
name = "pragma-sdk"
version = "2.4.5"
authors = ["0xevolve <matthias@pragma.build>"]
description = "Core package for rollup-native Pragma Oracle"
readme = "README.md"
homepage = "https://pragma.build"
repository = "https://github.com/Astraly-Labs/pragma-sdk"
documentation = "https://docs.pragma.build"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
include = ["pragma_sdk"]
exclude = ["tests/*", "tests/**/*_test.py"]
packages = [{ include = "pragma_sdk" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
"starknet.py" = "0.23.0"
typer = "0.6.1"
deprecated = "^1.2.14"
aioresponses = "^0.7.4"
requests-mock = "^1.11.0"
pydantic = "^2.7.4"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
redis = {version = "^5.0.7", extras = ["hiredis"]}

[tool.poetry.extras]
docs = ["sphinx", "enum-tools", "furo", "pallets-sphinx-themes"]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
furo = "^2024.5.6"
pallets-sphinx-themes = "^2.1.3"
enum-tools = { extras = ["sphinx"], version = "0.12.0" }

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.21.1"
ruff = "^0.4"
coverage = "^7.2.1"
pytest = "^7.2.2"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.6.1"
pytest-xdist = "^3.2.1"
pytest-cov = "^4.0.0"
setuptools = "^68.0.0"
pytest-rerunfailures = "^12.0"
moto = { extras = ["s3", "secretsmanager"], version = "^4.2.5" }
boto3 = "^1.28.61"
fakeredis = {version = "^2.26.0", extras=["json"]}

[tool.poetry.group.typing.dependencies]
mypy = "^1.10"
types-requests = "^2.26.0"
types-deprecated = "^1.2.9"
types-pyyaml = "^6.0.12.20240311"

[tool.poe.tasks]
lint = "ruff check ."
format = "ruff format ."
format_check = "ruff format . --check"
typecheck = "mypy pragma_sdk"

check_circular_imports = "poetry run python tests/check_circular_imports.py"
update_abis = "find ../pragma-oracle -name '*.sierra.json' -exec cp -prv '{}' './pragma_sdk/onchain/abis' ';'"

test_integration = "coverage run -m pytest --net=devnet -v --reruns 5 --only-rerun aiohttp.client_exceptions.ClientConnectorError tests/integration/ -s"
test_client = "coverage run -m pytest --net=devnet -v --reruns 5 --only-rerun aiohttp.client_exceptions.ClientConnectorError tests/integration/client_test.py -s"
test_update_client = "coverage run -m pytest --net=devnet -v --reruns 5 --only-rerun aiohttp.client_exceptions.ClientConnectorError tests/integration/update_client_test.py -s"
test_publisher = "coverage run -m pytest --net=devnet -v --reruns 5 --only-rerun aiohttp.client_exceptions.ClientConnectorError tests/integration/publisher_test.py -s"
test_fetchers = "coverage run -m pytest --net=devnet -v --reruns 5 --only-rerun aiohttp.client_exceptions.ClientConnectorError tests/integration/fetchers/ -s"
test_vrf = "coverage run -m pytest --net=devnet -v --reruns 1 --only-rerun aiohttp.client_exceptions.ClientConnectorError tests/integration/vrf_test.py -s"
test_merkle_feed = "coverage run -m pytest --net=devnet -v --reruns 5 --only-rerun aiohttp.client_exceptions.ClientConnectorError tests/integration/merkle_feed_test.py -s"

test_unit = "coverage run -m pytest --net=devnet -v --reruns 5 --only-rerun aiohttp.client_exceptions.ClientConnectorError tests/unit/ -s"
test_hop_handler = "coverage run -m pytest --net=devnet -v --reruns 5 --only-rerun aiohttp.client_exceptions.ClientConnectorError tests/unit/hop_handler_test.py -s"
test_index_aggregation = "coverage run -m pytest --net=devnet -v --reruns 5 --only-rerun aiohttp.client_exceptions.ClientConnectorError tests/unit/index_aggregation_test.py -s"
test_api_client = "coverage run -m pytest --net=devnet -v --reruns 5 --only-rerun aiohttp.client_exceptions.ClientConnectorError tests/unit/api_client_test.py -s"

test = "coverage run -m pytest --net=devnet -v --reruns 5 --only-rerun aiohttp.client_exceptions.ClientConnectorError tests/ -s"

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".github",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
  "scripts",
  "pragma-oracle",
]
# Same as Black.
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
warn_return_any = true
ignore_missing_imports = true
exclude = ["tests", "pragma_sdk/common/randomness/randomness_utils.py", "build"]
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[tool.poetry.build]
generate-setup-file = true

[build-system]
requires = ["setuptools", "wheel", "build", "Cython"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
source = ["pragma_sdk"]

[tool.coverage.report]
omit = ["*_test.py", "tests/*"]
skip_empty = true

[tool.poetry-monorepo-dependency-plugin]
enable = true
