[tool.poetry]
name = "price-pusher"
version = "0.0.1"
authors = ["0xevolve <matthias@pragma.build>"]
description = "Price pushing service for Pragma."
readme = "README.md"
homepage = "https://pragma.build"
repository = "https://github.com/Astraly-Labs/pragma-sdk"
documentation = "https://docs.pragma.build"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
include = ["price_pusher"]
packages = [{ include = "price_pusher" }]

[tool.poetry.scripts]
scheduler = 'price_pusher.main:main'

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pragma-sdk = { path = "../../", develop = true }
click = "^8.1.0"
pydantic = "^2.7.4"
boto3 = "^1.28.61"
moto = { extras = ["s3", "secretsmanager"], version = "^4.2.5" }

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.26.1"
ruff = "^0.4"
mypy = "^1.10"
coverage = "^7.2.1"
pytest = "^7.2.2"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.6.1"
pytest-xdist = "^3.2.1"
pytest-cov = "^4.0.0"
setuptools = "^70.1.0"
pytest-rerunfailures = "^12.0"

[tool.poetry.group.typing.dependencies]
mypy = "^1.10"
types-requests = "^2.26.0"
types-deprecated = "^1.2.9"

[tool.poe.tasks]
format = "ruff format ."
lint = "ruff check ."
lint_fix.shell = "ruff check . --fix"
typecheck = "mypy price_pusher"

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".github",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
  ".venv",
]
line-length = 100
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
files = ["price_pusher/*"]
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
exclude = []

[tool.poetry.build]
generate-setup-file = true

[tool.coverage.run]
source = ["price-pusher"]

[tool.coverage.report]
omit = ["*_test.py", "tests/*"]
skip_empty = true
